-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.1, 5.5.1
-
Windows 10
Intel GPU (can repro on HD4600 and also on HD 530)
AMD GPU ( HD 7950) or AMD FirePro W5100
Drivers: can repro with all latest Intel and AMD gfx drivers
-
38cb72b6fd34142785d0f791218d39ccafcfe84f
OpenGL crash on start on Intel + AMD GPU systems
All Qt applications that try to create OepnGL context crash on my systems with Intel GPU and an AMD HD 7950.
- Mininal repro with Qt OpenGL examples like the hellogl2
- Qt Creator also will crash the AMD driver on start.
- Need to have two monitors : one connected to the AMD and the other one to the Intel GPU DVI port.
- Main Windows Display has to be set to the AMD monitor (use Win10 system / display settings as shown in the attachment)
- To repro the crash start the application on the Intel window.
No crash if you start the application on the AMD window / monitor.
No crash if Intel monitor is set as the Main monitor
No crash with other GPU vendor combinations (i.e. Intel + NVIDIA ).
– Other OpenGL applications seem to run fine on the systems that can repro this.
Typical system configuration for a repro:
- Desktop motherboard + Haswell or Skylake CPU with integrated graphics like HD 4600 or HD 530
- Also plug in an AMD HD 7950 to the PCI-e slot
- Install Windows 10 and all the latest drivers
- is duplicated by
-
QTBUG-58688 QT 5.8/Windows: Crashes on AMD Drivers
-
- Closed
-
-
QTBUG-61974 Crash in QWindowsOpengl32DLL::setPixelFormat()
-
- Closed
-
- relates to
-
QTBUG-55198 Windows OpenGL blacklist issues with AMD + Intel multi-GPU setups
-
- Open
-
-
QTBUG-61974 Crash in QWindowsOpengl32DLL::setPixelFormat()
-
- Closed
-
-
QTBUG-65882 UI is not rendered when multiple displays are attached
-
- Reported
-
-
QTBUG-67499 Complete UI freeze on Optimus laptop (at least) when using QOpenGL within a QTabWidget
-
- Reported
-
-
QTBUG-48095 [Windows]: When the current GPU is disabled via the device manager then it will cause a crash or the window is no longer rendered
-
- Closed
-
-
QTBUG-69481 Windows: OpenGL contexts always tied to the primary adapter's OpenGL implementation on desktops with multiple cards with a display connected to each
-
- Closed
-
- resulted in
-
QTBUG-73008 QTBUG-50371 causes debugging overhead
-
- Closed
-